# Astrological-App

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_new.py
app/: chat_service.py  evaluate_rag.py  intent_router.py  llm.py  memory.py  retriever.py  test.py  zodiac.py
data/: career_guidance.txt  love_guidance.txt  nakshatra_mapping.json  planetary_impacts.json  spiritual_guidance.txt  zodiac_traits.json
